FIX: Check obbject number against trailer size
- added specific check of object number against trailer size and signal new error `PDF-HUL-163` with details;
- validation continues after these objects which should be ignored according to the PDF specification;
- renamed variables for clarity;
- replaced deprecated used of `new Integer()` with `Integer.valueOf()' in PDF module; and
- fixed error output for test corpus for affected files.